manifest/demoteam/pullrequest/pr/42/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pullrequest-pr-42
    env: pr
    team: demoteam
  name: pullrequest-pr-42
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam
        app: pullrequest-pr-42
        env: pr
    spec:
      securityContext: {}
      containers:
      - image: nginxinc/nginx-unprivileged:alpine3.22-perl
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        securityContext: {}
        ports:
        - containerPort: 8080
        name: main
  selector:
    matchLabels:
      team: demoteam
      app: pullrequest-pr-42
      env: pr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: pullrequest-pr-42
    env: pr
    team: demoteam
  name: pullrequest-pr-42
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: pullrequest-pr-42.pr.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: pullrequest-pr-42
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pullrequest-pr-42
    env: pr
    team: demoteam
  name: pullrequest-pr-42
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: pullrequest-pr-42
    env: pr
    team: demoteam
